# EventService

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
data/: lang.json
scripts/: setup_mongo.sh  setup_rabbit.sh  setup_redis.sh
settings/: config.json  mongo.env  rabbitmq.env  redis.env
src/: container.py  main.py
src/api/: auth.py  events.py
src/core/: config.py  manager.py  provider.py  repository.py  schemas.py
src/core/application/: factory.py  utils.py
src/core/auth/: __init__.py  jwt.py  schemas.py  setup.py
src/core/brokers/: rabbitmq.py  setup.py
src/core/database/: provider.py  utils.py
src/core/exception/: custom.py  handlers.py  reason.py
src/services/: provider.py
src/services/auth/: models.py  repository.py  schemas.py  service.py
src/services/events/: messages.py  models.py  publisher.py  repository.py  schemas.py  service.py  types.py
src/services/redis/: service.py  setup.py
tests/: test_auth_utils.py
