[tool.poetry]
name = "events-service"
version = "0.1.0"
description = "FastAPI Events and Auth service with MongoDB and RabbitMQ publisher"
authors = ["Anatoly"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
motor = "^3.6.0"
pymongo = "^4.8.0"
bcrypt = "^4.2.0"
PyJWT = "^2.9.0"
aio-pika = "^9.4.3"
pydantic = {extras = ["email"], version = "^2.11.7"}
python-dotenv = "^1.0.1"
beanie = "^2.0.0"
dishka = "^1.6.0"
redis = "^6.4.0"
faststream = {extras = ["rabbit"], version = "^0.5.48"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
